<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profileText"
            android:icon="@drawable/ic_menu_profile"
            android:tint="@color/colorMutedLight"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settingsText"
            android:icon="@drawable/ic_menu_settings"
            android:tint="@color/colorMutedLight"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:tint="@color/colorMutedLight"
            android:title="@string/logoutText" />
    </group>

    <item android:title="@string/menuGuardGroup">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:tint="@color/colorMutedLight"
                android:title="Home" />

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:tint="@color/colorMutedLight"
                android:title="@string/helpText" />

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:tint="@color/colorMutedLight"
                android:title="@string/feedbackText" />
        </menu>
    </item>

</menu>

