<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="Main"
            android:icon="@drawable/ic_menu_home"/>

        <item
            android:id="@+id/nav_controller"
            android:title="@string/controllerActivity"
            android:icon="@drawable/ic_menu_controller"/>

        <item
            android:id="@+id/nav_maps"
            android:title="@string/mapActivity"
            android:icon="@drawable/ic_menu_map"/>

    </group>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profileText"
            android:icon="@drawable/ic_menu_profile" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logoutButton"
            android:icon="@drawable/ic_menu_logout" />

</menu>
