<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.group02.guard.TravellerProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myProfileText"
            android:text="@string/profileText"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"/>

        <!--Section use to update email-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeEmail"
            android:text="@string/updateEmail"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextBox"
            android:hint="@string/newEmailText"
            android:inputType="textEmailAddress"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateEmail"
            android:text="@string/updateButtonText"/>

        <!--Section use to update password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changePassword"
            android:text="@string/newPasswordText"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oldPasswordTextBox"
            android:hint="@string/oldPasswordText"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPasswordTextBox1"
            android:hint="@string/newPasswordText"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPasswordTextBox2"
            android:hint="@string/confirmNewPasswordText"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updatePassword"
            android:text="@string/updateButtonText"/>

    </LinearLayout>

</FrameLayout>
