<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/myProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/profileText" />

        <!--Section use to update email-->
        <TextView
            android:id="@+id/changeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/updateEmail" />

        <EditText
            android:id="@+id/oldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:hint="@string/oldEmailText"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/emailTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:hint="@string/newEmailText"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/updateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/updateButtonText" />

        <!--Section use to update password-->
        <TextView
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/updatePassword" />

        <EditText
            android:id="@+id/oldPasswordTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:hint="@string/oldPasswordText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPasswordTextBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:hint="@string/newPasswordText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPasswordTextBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:hint="@string/confirmNewPasswordText"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/updatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/updateButtonText" />

        <Button
            android:id="@+id/deleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/deleteButtonText" />

        <fragment
            android:id="@+id/bottomBar"
            android:name="com.group02.guard.ToolbarBottomFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout="@layout/toolbar_bottom" />

    </LinearLayout>

</ScrollView>