<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.group02.guard.NavigationActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/app_bar_navigation2"
    android:orientation="vertical">

    <Button
        android:id="@+id/controlButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_controller"
        android:text="@string/controllerActivity"
        android:drawableTint="@color/colorMutedLight"
        android:layout_weight="0.3"/>

    <Button
        android:id="@+id/mapsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_map"
        android:text="@string/mapActivity"
        android:drawableTint="@color/colorMutedLight"
        android:layout_weight="0.3"/>

    <Button
        android:id="@+id/gpsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_gps"
        android:text="@string/gpsActivity"
        android:drawableTint="@color/colorMutedLight"
        android:layout_weight="0.3" />


</LinearLayout>
